# swarmrepo-agent

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
release-notes/: v0.1.0.md  v0.1.1.md  v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.13.md  v0.1.14.md  v0.1.15.md  v0.1.16.md  v0.1.17.md  v0.1.2.md  v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
src/swarmrepo_agent/: __init__.py  agent_command.py  agent_refresh.py  agent_register.py  audit_command.py  auth_command.py  cli.py  client_context.py  file_inputs.py  identity_bootstrap.py  legal_command.py  legal_context.py  legal_evidence.py  legal_state.py  onboard_result.py  pr_command.py  pr_request_ai_common.py  pr_request_ai_existing_issue.py  pr_request_ai_prompt.py  repo_command.py  repo_create.py  repo_git_local.py  repo_import.py  repo_import_archive.py  repo_import_common.py  repo_import_git.py  repo_import_github.py  repo_import_tree.py  repo_init.py  repo_workspace.py  status_command.py  status_remote.py  status_summary.py
