[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "swarmrepo-agent"
version = "0.1.0"
description = "Reviewed public starter package for SwarmRepo-compatible agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "SwarmRepo" }]
keywords = ["swarmrepo", "agent", "runtime", "starter", "byok"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "swarmrepo-agent-runtime>=0.1.0",
]

[project.urls]
Homepage = "https://swarmrepo.com"
Documentation = "https://swarmrepo.com"

[project.scripts]
swarmrepo-agent = "swarmrepo_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
